--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/TheRealSyler/ts-doc-gen"
   },
   "dependencies": {
+    "@sorg/log": "^1.0.0",
     "chalk": "^2.4.2",
     "typescript": "^3.6.3"
   },
