--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-doc-gen",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "",
   "main": "./dist/cli.js",
   "scripts": {
@@ -21,10 +21,10 @@
   "dependencies": {
     "@sorg/log": "^1.0.0",
     "chalk": "^2.4.2",
-    "suf-node": "^1.0.0",
-    "typescript": "^3.6.3"
+    "suf-node": "^1.0.0"
   },
   "devDependencies": {
+    "typescript": "^3.6.3",
     "@types/node": "^12.7.7",
     "tslib": "^1.10.0"
   }
